# BAAS_Cpp

./: .gitignore  CMakeLists.txt  README.md  deps.lock.json  installer.py  main.cpp  resources.lock.json  test2.cpp  version.h.in  version.txt.in
apps/BAAS/: CMakeLists.txt  main.cpp  version.h.in  version.txt.in  workflow_acceptance_checker.cpp
apps/BAAS/cmake/: Linux.cmake  MacOS.cmake  Version.cmake  Windows.cmake
apps/BAAS/include/: BAASDevelopUtils.h  BAAS_Cpp.h  ISA.h  utils.h
apps/BAAS/include/module/auto_fight/: BAASAutoFight.h  auto_fight.h  auto_fight_d.h  constants.h  data_updater.h  screenshot_data_recoder.h
apps/BAAS/include/module/auto_fight/actions/: acc_handler.h  auto_fight_act.h  auto_handler.h  base_handler.h  restart_handler.h  skill_handler.h  skip_ani_handler.h
apps/BAAS/include/module/auto_fight/conditions/: AndCombinedCondition.h  BaseCondition.h  BattleTimeCondition.h  BossHealthCondition.h  CostCondition.h  OrCombinedCondition.h  SkillNameCondition.h
apps/BAAS/include/module/auto_fight/screenshot_data/: AccelerationPhaseUpdater.h  AccelerationStateUpdater.h  AutoStateUpdater.h  BaseDataUpdater.h  BattleTimeUpdater.h  BossHealthUpdater.h  CostUpdater.h  FightLeftTimeUpdater.h  ObjectPositionUpdater.h  RoomLeftTimeUpdater.h  SkillCostUpdater.h  SkillNameUpdater.h  screenshot_data_recoder.h
apps/BAAS/include/module/auto_fight/yolo/: BAAS_yolo.h  yolo_d.h
apps/BAAS/include/module/collect_activity_fee/: CollectActivityFee.h
apps/BAAS/include/module/collect_reward/: CollectReward.h
apps/BAAS/include/module/mail/: Mail.h
apps/BAAS/include/module/restart/: Restart.h
apps/BAAS/resource/auto_fight_workflow/: 2025_5_15_ins_k_k_m_e_h_f_p1.json  Special-Task-L_Aris_Maid.json  test.json
apps/BAAS/resource/auto_fight_workflow/tutorials/: 1. How To Release Hoshino ( Swimsuit ) Skill when Cost Reach 5.0.json  2. How To Check Initial Skills.json  3. How To Release Ui Skill To Aru.json  4. How To Restart When [ Ako ] Skill Not Appear.json  5. How To Release [ Aru ] Skill and Immediately Release [ Ako ] and [ Himari ] Skill to [ Aru ].json
apps/BAAS/resource/config/: default_config.json
apps/BAAS/resource/feature/: commission.json  common.json  fight.json  plot.json  total_assault.json
apps/BAAS/resource/image/CN/zh-cn/image_info/: commission.json  common.json  fight.json  plot.json  skill_active.json  skill_l_inactive.json  skill_r_inactive.json  total_assault.json
apps/BAAS/resource/image/CN/zh-cn/image_info/plot/: cost_mask.json
apps/BAAS/resource/procedure/: common.json  fight.json
apps/BAAS/resource/procedure/auto_fight/: test_auto_fight.json
apps/BAAS/resource/yolo_models/: data.yaml
apps/BAAS/src/: BAASDevelopUtils.cpp  utils.cpp
apps/BAAS/src/module/auto_fight/: BAASAutoFight.cpp  auto_fight.cpp  auto_fight_d.cpp  constants.cpp  screenshot_data_recoder.cpp
apps/BAAS/src/module/auto_fight/actions/: acc_handler.cpp  auto_fight_act.cpp  auto_handler.cpp  base_handler.cpp  restart_handler.cpp  skill_handler.cpp  skip_ani_handler.cpp
apps/BAAS/src/module/auto_fight/conditions/: AcclerationPhaseCondition.cpp  AndCombinedCondition.cpp  BaseCondition.cpp  BattleTimeCondition.cpp  BossHealthCondition.cpp  CostCondition.cpp  OrCombinedCondition.cpp  SkillNameCondition.cpp
apps/BAAS/src/module/auto_fight/screenshot_data/: AccelerationPhaseUpdater.cpp  AccelerationStateUpdater.cpp  AutoStateUpdater.cpp  BaseDataUpdater.cpp  BattleTimeUpdater.cpp  BossHealthUpdater.cpp  CostUpdater.cpp  ObjectPositionUpdater.cpp  SkillCostUpdater.cpp  SkillNameUpdater.cpp  screenshot_data_recoder.cpp
apps/BAAS/src/module/auto_fight/yolo/: BAAS_yolo.cpp  yolo_d.cpp
apps/BAAS/src/module/collect_reward/: CollectReward.cpp
apps/BAAS/src/module/competition/: Competition.cpp
apps/BAAS/src/module/mail/: Mail.cpp
apps/BAAS/src/module/restart/: Restart.cpp
apps/BAAS_auto_fight_workflow_checker/: CMakeLists.txt  main.cpp
apps/ISA/: CMakeLists.txt  main.cpp  version.h.in
apps/ISA/include/: ISA.h
apps/ISA/include/module/collect_activity_fee/: CollectActivityFee.h
apps/ISA/include/module/collect_reward/: CollectReward.h
apps/ISA/include/module/competition/: Competition.h
apps/ISA/include/module/mail/: Mail.h
apps/ISA/include/module/restart/: Restart.h
apps/ISA/include/module/work/: Work.h
apps/ISA/resource/feature/: common.json  resart.json  work.json
apps/ISA/resource/image/JP/ja-jp/image_info/: activity_fee.json  collect_reward.json  competition.json  mail.json  main_page.json  pro_produce.json  work.json
apps/ISA/resource/procedure/: competition.json  mail.json  restart.json  work.json
apps/ISA/src/: ISA.cpp  utils.cpp
apps/ISA/src/module/collect_activity_fee/: CollectActivityFee.cpp
apps/ISA/src/module/collect_reward/: CollectReward.cpp
apps/ISA/src/module/competition/: Competition.cpp
apps/ISA/src/module/mail/: Mail.cpp
apps/ISA/src/module/restart/: Restart.cpp
apps/ISA/src/module/work/: Work.cpp
apps/ocr_server/: CMakeLists.txt  README.md  baas_ocr_main.cpp  native-lib.cpp  version.h.in  version.txt.in
apps/ocr_server/OCR_Client/: Client.py
apps/ocr_server/cmake/: Android.cmake  Linux.cmake  MacOS.cmake  Version.cmake  Windows.cmake
apps/ocr_server/include/: definitions.h  server.h  utils.h
apps/ocr_server/include/android/: exports.h
apps/ocr_server/src/: server.cpp  utils.cpp
apps/ocr_server/src/android/: exports.cpp
apps/ocr_server/src/rc/: app.rc
apps/ocr_server/test/: Client.py  requirements.txt  t.py  test.py  test_get_text_boxes.py  test_init_release_model.py  test_ocr.py  test_ocr_for_single_line.py  test_ocr_multi_thread.py  test_shared_memory.py  test_start_stop_server.py  test_thread_pool.py  utils.py
cmake/: BAASDependency.cmake  NmsBenchmark.cmake  Version.cmake  dependencies.cmake  platform.cmake  utils.cmake
config/: global_setting.json
deploy/: __init__.py
docs/: C++coding style gudie.txt  CMake.md  ImageResource Description.txt  bug_possible_reason.txt  dependencies.md  note.txt
include/: BAAS.h  BAASAdbUtils.h  BAASAutoFight.h  BAASConfig.h  BAASConnection_attr.h  (+26 more)
(+250 files in other folders)
